# ym2151-emu-win-bin

./: .gitattributes  .gitignore  ARCHITECTURE.ja.md  BUILD_CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  PR_SUMMARY.md  QUICKSTART.ja.md  README.md  build-node-speaker.sh
.github/: copilot-instructions.md
.github/workflows/: README.deprecated.md  build-go.yml  build-node-speaker.yml  build-python.yml  build-rust.yml  build-typescript.yml  daily-build.yml
binaries/: README.md
binaries/go/: .gitkeep
binaries/python/: .gitkeep
binaries/rust/: .gitkeep
docs/: BINARY_COMMIT_FIX.md  BUILD_SCRIPT_GENERATION_SUMMARY.md  BUILD_VERIFICATION.md  ISSUE_RESOLUTION_SUMMARY.md  LIBRARY_REQUIREMENT_CHECK.en.md  LIBRARY_REQUIREMENT_CHECK.md  LIBRARY_STRUCTURE.md  MIGRATION_GUIDE.md  OFFICIAL_API_ANALYSIS.md  SUMMARY.md  VISUAL_SUMMARY.md  automation_plan.md  github_actions_plan.md  implementation_plan_go.md  implementation_plan_python.md  implementation_plan_rust.md  implementation_plan_typescript.md  issue_completion_report.md  libraries.md  workflow_failure_analysis.md  workflow_improvement_summary.md
examples/: README.md  test-speaker.js
scripts/: build_all.sh  build_go.sh  build_python.sh  build_rust.sh  build_typescript.sh  check_library_requirements.sh
src/go/: Makefile  README.md  ym2151.h
src/python/: Makefile  README.md
src/rust/: Cargo.toml  README.md  build.rs
src/rust/src/: lib.rs
src/typescript_node/: README.md  binding.gyp  package.json
src/typescript_node/src/: ym2151_addon.cc
