[package]
name = "nukedopm"
version = "0.1.0"
edition = "2021"

[lib]
name = "nukedopm"
crate-type = ["staticlib", "cdylib"]  # 静的と動的両方
# 注: このライブラリは公式Nuked-OPMをビルドしたものです
#     公式API (OPM_Reset, OPM_Write, OPM_Clock等) がそのまま提供されます

[build-dependencies]
cc = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
